<resources>
    <string name="app_name">Free Facebook</string>
    <string name="errorMessage">Please turn on mobile data !</string>
    <string name="home_title">Home</string>
    <string name="profile_title">Profile</string>
    <string name="messages_title">Messages</string>
    <string name="notifications_title">Notifications</string>
    <string name="friends_title">Friends</string>
    <string name="groups_title">Groups</string>
</resources>