<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home_title"
        android:icon="@drawable/ic_action_name"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile_title"
        android:icon="@drawable/profil"/>
    <item
        android:id="@+id/messages"
        android:title="@string/messages_title"
        android:icon="@drawable/messages"/>
    <item
        android:id="@+id/notifications"
        android:title="@string/notifications_title"
        android:icon="@drawable/notifications"/>
    <item
        android:id="@+id/friends"
        android:title="@string/friends_title"
        android:icon="@drawable/friends"/>


<!--    <item-->
<!--        android:id="@+id/groups"-->
<!--        android:title="@string/groups_title"-->
<!--        android:icon="@drawable/groups"/>-->
</menu>